syntax = "proto3";
package msg_source;
option go_package = "./msg_source";

message GetRequest {
    int32 batch = 1;
}

message GetResponse {
    bytes value = 1;
}

message Empty {}

service MessageSource {
    rpc Receive(GetRequest) returns (GetResponse);
}